--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header h1 {
 }
 
 .L_side button:first-child {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .L_side button {
@@ -155,8 +155,8 @@ header h1 {
 }
 
 .L_side #romain {
-  position: absolute;
-  top: 10px;
+  position: relative;
+  top: -10px;
   left: 0;
 }
 
